@@ -25,6 +25,7 @@ import qualified Command.SetKey
 import qualified Command.Fix
 import qualified Command.Init
 import qualified Command.Fsck
+import qualified Command.Unused
 import qualified Command.Unlock
 import qualified Command.Lock
 import qualified Command.PreCommit
@@ -62,6 +63,8 @@ subCmds =
 		"fix up symlinks to point to annexed content"
 	, SubCommand "fsck" maybepath	Command.Fsck.seek
 		"check for problems"
+	, SubCommand "unused" nothing	Command.Unused.seek
+		"look for unused file content"
 	, SubCommand "find" maybepath	Command.Find.seek
 		"lists available files"
 	]
@@ -70,6 +73,7 @@ subCmds =
 		maybepath = "[PATH ...]"
 		key = "KEY ..."
 		desc = "DESCRIPTION"
+		nothing = ""
 
 -- Each dashed command-line option results in generation of an action
 -- in the Annex monad that performs the necessary setting.
